# sprinkler

./: .coveragerc  .gitignore  .sublime_project  .travis.yml  Makefile  Pipfile  README.md  bloc-note.txt  pyproject.toml  pytest.ini  requirements.txt  spec.odt  test_slixmpp.py  unittest.sh
scripts/: args.conf  deploy.sh  sprinkler.service
src/: channel.js  channel.py  checkprogram.py  cmdparser.py  config.py  database.py  engine.py  jsonvalidate.py  messages.py  meteo.py  periodic.py  progdays.py  program.py  scheduler.py  sprinkler.py  state.py  stime.py  timer.py  update_channels.py  waitevents.py  xmpp.py
src/engine/: channel.py
src/hw/: dummy.py  gpio.py  raspberry.conf  raspberry.py  relayboard.conf  relayboard.py
src/schedule/: planning.py  stime.py
src/schedule/tests/: test_plannings.py
src/services/: config.py  singleton.py  slogging.py
src/test/: conftest.py  json_channel_ok.js  json_ko_1.js  json_ok.js  json_ok_2.js  runner.py  test_channel.py  test_cmdparser.py  test_config.py  test_database.py  test_engine.py  test_jsonvalidate.py  test_long_test.py  test_messages.py  test_meteo.py  test_meteo_conf_ko.py  test_planning.py  test_plannings.py  test_program.py  test_sprinkler.py  test_state.py  test_stime.py  test_timer.py  test_update_channels.py  test_xmpp.py  xmpp-send.py  xmppbot.py
